--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "axios": "^1.1.2",
+    "mockjs": "^1.1.0",
     "svelte-spa-router": "^3.3.0"
   }
 }
